385
1. refs #385 - clean up vagrant script based on review changes

2. refs #385 - remove redundancies between InstallHootDevelopmentEnvironment.sh and VagrantProvision.sh