@@ -1,287 +1,70 @@
 #!/usr/bin/env bash
 
 # This script:  
-#   - is similar to the hoot vagrant ubuntu 14.04 setup without the vagrant part; meant for installing to bare metal
-# for performance reasons (faster compiles, etc.)
-#   - has added developer tools and other goodies (hadoop, webex, etc.)
-#   - lets you run the regression tests 
-#   - is not actively supported and not guaranteed to be in sync with the latest hoot setup (see the vagrant install for the latest and greatest hoot setup) 
-# Use this as one possible way to set up a Hootenanny developer environment.  USE THE SCRIPT AT YOUR OWN RISK
-
-#TODO: replace /home with your home and HOOT_HOME with your HOOT_HOME (fix)
+#   - is meant for installing to bare metal for performance reasons (faster compiles, etc.)
+#   - first calls into the vagrant ubuntu script for a base installation
+#   - has added developer tools and other goodies
+#   - lets you run hoot on hadoop (this part *could* be moved to the vagrant install, if desired) - NOTE: The hadoop step unfortunately isn't fully automated yet...
+# you'll have to interact with the command prompt when it runs.
+#   - lets you run the regression tests
+#
+# Use this as one possible way to set up a Hootenanny developer environment.  Feel free to tweak your own version of it.
+#
+# To run this script:
+#
+#  cd ~
+#  git clone git@github.com:ngageoint/hootenanny.git hoot
+#  cd hoot
+#  git submodule init
+#  git submodule update
+#  hoot/scripts/InstallHootDevelopmentEnvironment.sh
 
 cd ~
-mkdir -p hoot
 
-if ! grep -i --quiet HOOT $HOME/.profile; then
-sudo bash -c "cat >> $HOME/.profile" <<EOT
+echo "Installing base dependencies..."
+hoot/scripts/VagrantProvision.sh
 
-export JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
-export HADOOP_HOME=/usr/local/hadoop
-export HOOT_HOME=/home/hoot
-export PATH=/usr/local/bin:/usr/local/lib:$PATH:/usr/lib/x86_64-linux-gnu:$HADOOP_HOME/bin:$HOOT_HOME/bin
-EOT
-fi
-source $HOME/.profile
+echo "Backing up Tomcat 6 settings..."
+mkdir -p ~/tmp
+cp /etc/default/tomcat6 ~/tmp
+cp /etc/tomcat6/server.xml ~/tmp
+cp /etc/tomcat6/context.xml ~/tmp
 
-# Update OS
-sudo apt-get update
-sudo apt-get upgrade -y
-sudo apt-get dist-upgrade -y
-sudo apt-get install ntp -y
+# tomcat fix - Use tomcat 7 here instead of tomcat 6, since eclipse installed from repos needs tomcat 7.  I don't like changing the Tomcat version for this environment, but the impact is minimal and the eclipse installation can't be automated very easily if its not done..
+echo "Removing Tomcat 6..."
+sudo apt-get remove tomcat6
+sudo apt-get autoremove -y
+sudo apt-get install -y libtomcat7-java
 
-# Add the postgres repo
-if [ ! -f /etc/apt/sources.list.d/pgdg.list ]; then
-    echo "Adding PostgreSQL repository to apt"
-    sudo bash -c "echo 'deb http://apt.postgresql.org/pub/repos/apt/ '$(lsb_release -cs)'-pgdg main' > /etc/apt/sources.list.d/pgdg.list"
-    wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-    sudo apt-get update -y
-    sudo apt-get upgrade -y
-fi
+echo "Restoring settings to Tomcat 7..."
+sudo cp  ~/tmp/tomcat6 /etc/default
+sudo cp ~/tmp/server.xml /etc/tomcat7/
+sudo cp ~/tmp/context.xml /etc/tomcat7/
+# Do tomcat7 group permissions need to be set on these files in a developer environment?
+# Do sym links have to be made for the log dirs, etc?
 
-# Install dependencies
-# use tomcat 7 here instead of tomcat 6 (what's tested with hoot...I don't really like this...but), since eclipse 
-# installed from repos (installed in this script later) needs tomcat 7
-echo "Installing dependencies"
-sudo apt-get install -y texinfo g++ libicu-dev libqt4-dev git-core libboost-dev libcppunit-dev libcv-dev libopencv-dev libgdal-dev liblog4cxx10-dev libnewmat10-dev libproj-dev python-dev libjson-spirit-dev automake1.11 protobuf-compiler libprotobuf-dev gdb libqt4-sql-psql libgeos++-dev swig lcov tomcat7 openjdk-7-jdk openjdk-7-dbg maven libstxxl-dev nodejs-dev nodejs-legacy doxygen xsltproc asciidoc pgadmin3 curl npm libxerces-c28 libglpk-dev libboost-all-dev source-highlight texlive-lang-arabic texlive-lang-hebrew texlive-lang-cyrillic graphviz w3m python-setuptools python python-pip git ccache libogdi3.2-dev gnuplot python-matplotlib libqt4-sql-sqlite wamerican-insane ruby gcc make ruby-dev zlib1g-dev patch xvfb x11vnc unzip nodejs meld qtcreator distcc htop synergy gparted eclipse eclipse-jdt libpangoxft-1.0-0:i386 libxv1:i386 libpangox-1.0-0:i386 libgtk2.0-0 libxtst6 libxi-dev libasound2 libgtk2.0-0:i386 libxtst6:i386 libasound2:i386 libgcj14-awt:i386 eclipse-pde eclipse-platform* libtomcat7-java osmosis libpangoxft-1.0-0:i386 libxv1:i386 libpangox-1.0-0:i386 libgtk2.0-0 libxtst6 libxi-dev libasound2 libgtk2.0-0:i386 libxtst6:i386 libasound2:i386 libgcj14-awt:i386 icedtea-pluginsudo apt-get install -y meld qtcreator distcc htop synergy gparted eclipse eclipse-jdt libpangoxft-1.0-0:i386 libxv1:i386 libpangox-1.0-0:i386 libgtk2.0-0 libxtst6 libxi-dev libasound2 libgtk2.0-0:i386 libxtst6:i386 libasound2:i386 libgcj14-awt:i386 eclipse-pde eclipse-platform* libtomcat7-java osmosis libpangoxft-1.0-0:i386 libxv1:i386 libpangox-1.0-0:i386 libgtk2.0-0 libxtst6 libxi-dev libasound2 libgtk2.0-0:i386 libxtst6:i386 libasound2:i386 libgcj14-awt:i386 icedtea-plugin ruby ruby-dev xvfb gcc make zlib1g-dev patch x11vnc unzip nodejs
-sudo apt-get remove qt5-default 
-sudo apt-get autoremove
-if ! dpkg -l | grep --quiet wamerican-insane; then
-    # See /usr/share/doc/dictionaries-common/README.problems for details
-    # http://www.linuxquestions.org/questions/debian-26/dpkg-error-processing-dictionaries-common-4175451951/
-    sudo apt-get install -y wamerican-insane
-    sudo /usr/share/debconf/fix_db.pl
-    sudo dpkg-reconfigure dictionaries-common
-fi
+echo "Installing development environment dependencies..."
+
+# IDE's
+sudo apt-get install -y eclipse eclipse-jdt eclipse-pde eclipse-platform*
+
+# misc goodies - distcc will require further configuration, if used
+sudo apt-get install -y meld qtcreator distcc htop synergy gparted osmosis 
+
+# needed for webex
+sudo apt-get install -y libpangoxft-1.0-0:i386 libxv1:i386 libpangox-1.0-0:i386 libgtk2.0-0 libxtst6 libxi-dev libasound2 libgtk2.0-0:i386 libxtst6:i386 libasound2:i386 libgcj14-awt:i386 icedtea-plugin
+
+# If you're fed up with the unity desktop, then uncomment this for xfce; use 'xfce4-display-settings -m' after installing for display config
+# sudo apt-get install xfce4
 
 sudo apt-get autoremove -y
 
-# If you're fed up with unity, then uncomment this for xfce; use 'xfce4-display-settings -m' after install for display config
-# sudo apt-get install xfce4
-
-if ! grep --quiet "export HOOT_HOME" ~/.profile; then
-    echo "Adding hoot home to profile"
-    echo "export HOOT_HOME=/home/vagrant/hoot" >> ~/.profile
-fi
-if ! grep --quiet "\$HOME/.gem/ruby/1.9.1/bin:\$HOME/bin:\$HOOT_HOME/bin" ~/.profile; then
-    echo "Adding path vars to profile"
-    echo "export PATH=\$PATH:\$HOME/.gem/ruby/1.9.1/bin:\$HOME/bin:\$HOOT_HOME/bin" >> ~/.profile
-fi
-source ~/.profile
-
-#sudo gem install mime-types -v 2.6.2
-#sudo gem install capybara -v 2.5.0
-sudo gem install --user-install selenium-cucumber capybara capybara-webkit rspec
-#sudo gem install --user-install selenium-cucumber capybara-webkit rspec
-#sudo gem install cucumber capybara-webkit selenium-webdriver rspec capybara-screenshot
-
-if [ ! -f google-chrome-stable_current_amd64.deb ]; then
-    echo "Installing Chrome"
-    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-    sudo dpkg -i google-chrome-stable_current_amd64.deb
-    sudo apt-get -f install -y
-fi
-
-if [ ! -f bin/chromedriver ]; then
-    echo "Installing Chromedriver"
-    mkdir -p $HOME/bin
-    wget http://chromedriver.storage.googleapis.com/2.14/chromedriver_linux64.zip
-    unzip -d $HOME/bin chromedriver_linux64.zip
-fi
-if ! grep --quiet "$HOME/bin" ~/.profile; then
-    echo "Adding chromedriver to path"
-    echo "export PATH=\$PATH:\$HOME/bin" >> ~/.profile
-    source ~/.profile
-fi
-
-# Hoot Baseline is PostgreSQL 9.1 and PostGIS 1.5, so we need a deb file and
-# then remove 9.4
-if [ ! -f postgresql-9.1-postgis_1.5.3-2_amd64.deb ]; then
-    echo "Installing PostgreSQL 9.1"
-    wget http://launchpadlibrarian.net/86690107/postgresql-9.1-postgis_1.5.3-2_amd64.deb
-    sudo dpkg -i postgresql-9.1-postgis_1.5.3-2_amd64.deb
-    sudo apt-get -f install -y
-    # fixes missing dependency of postgis 1.5 by installing postgresql 9.1. 9.1 is installed listening on the default port, 5432. It unfortunately also installs postgres 9.4 but we remove that cleanly in the following steps, while leaving postgres 9.1 untouched
-    echo "Removing PostgreSQL 9.4"
-    sudo apt-get purge -y postgresql-9.4 postgresql-client-9.4 postgresql-9.4-postgis-scripts postgresql-9.5 postgresql-client-9.5 postgresql-9.5-postgis-scripts
-    sudo apt-get install -y postgresql-contrib-9.1
-fi
-
-# Get GDAL & FileGDB_API source
-if [ ! -f gdal-1.10.1.tar.gz ]; then
-    echo "Downloading GDAL source"
-    wget http://download.osgeo.org/gdal/1.10.1/gdal-1.10.1.tar.gz
-fi
-if [ ! -d gdal-1.10.1 ]; then
-    echo "Extracting GDAL source"
-    tar zxvfp gdal-1.10.1.tar.gz
-fi
-if [ ! -f FileGDB_API_1_3-64.tar.gz ]; then
-    echo "Downloading FileGDB API source"
-    wget http://downloads2.esri.com/Software/FileGDB_API_1_3-64.tar.gz
-fi
-if [ ! -d /usr/local/FileGDB_API ]; then
-    echo "Extracting FileGDB API source & installing lib"
-    sudo tar xvfp FileGDB_API_1_3-64.tar.gz --directory /usr/local
-    sudo sh -c "echo '/usr/local/FileGDB_API/lib' > /etc/ld.so.conf.d/filegdb.conf"
-fi
-
-# Build GDAL w/ FileGDB
-if ! ogrinfo --formats | grep --quiet FileGDB; then
-    echo "Building GDAL w/ FileGDB"
-    export PATH=/usr/local/lib:/usr/local/bin:$PATH
-    cd gdal-1.10.1
-    sudo ./configure --with-fgdb=/usr/local/FileGDB_API --with-pg=/usr/bin/pg_config --with-python
-    sudo make -j$(nproc)
-    sudo make install
-    cd swig/python
-    python setup.py build
-    sudo python setup.py install
-    sudo ldconfig
-    cd ~
-fi
-
-# Node.js modules
-if ! grep --quiet NODE_PATH ~/.profile; then
-    echo "Installing node js dependencies"
-    sudo npm config set registry http://registry.npmjs.org/
-    sudo npm install -g xml2js htmlparser imagemagick mocha@1.20.1 express@3.1.2 async html-to-text restler
-    echo 'Adding NODE_PATH to user environment'
-    echo 'export NODE_PATH=/usr/local/lib/node_modules' >> ~/.profile
-    source ~/.profile
-fi
-
-# Module needed for OSM API db test
-if [ ! -d $HOME/.cpan ]; then
-    (echo y;echo o conf prerequisites_policy follow;echo o conf commit)|sudo cpan
-    sudo perl -MCPAN -e 'install XML::Simple'
-fi
-
-# Create Services Database
-if ! sudo -u postgres psql -lqt | grep -i --quiet hoot; then
-    echo "Creating Services Database"
-    sudo -u postgres createuser --superuser hoot
-    sudo -u postgres psql -c "alter user hoot with password 'hoottest';"
-    sudo -u postgres createdb hoot --owner=hoot
-    sudo -u postgres createdb wfsstoredb --owner=hoot
-    sudo -u postgres psql -d hoot -c 'create extension hstore;'
-    sudo -u postgres psql -d postgres -c "UPDATE pg_database SET datistemplate='true' WHERE datname='wfsstoredb'"
-    sudo -u postgres psql -d wfsstoredb -f /usr/share/postgresql/9.1/contrib/postgis-1.5/postgis.sql
-    sudo -u postgres psql -d wfsstoredb -f /usr/share/postgresql/9.1/contrib/postgis-1.5/spatial_ref_sys.sql
-    sudo -u postgres psql -d wfsstoredb -c "GRANT ALL on geometry_columns TO PUBLIC;"
-    sudo -u postgres psql -d wfsstoredb -c "GRANT ALL on geography_columns TO PUBLIC;"
-    sudo -u postgres psql -d wfsstoredb -c "GRANT ALL on spatial_ref_sys TO PUBLIC;"
-fi
-
-# PostgreSQL Tuning
-if ! grep -i --quiet HOOT /etc/postgresql/9.1/main/postgresql.conf; then
-echo "Tuning PostgreSQL"
-sudo -u postgres sed -i.bak s/^max_connections/\#max_connections/ /etc/postgresql/9.1/main/postgresql.conf
-sudo -u postgres sed -i.bak s/^shared_buffers/\#shared_buffers/ /etc/postgresql/9.1/main/postgresql.conf
-sudo -u postgres bash -c "cat >> /etc/postgresql/9.1/main/postgresql.conf" <<EOT
-
-#--------------
-# Hoot Settings
-#--------------
-max_connections = 1000
-shared_buffers = 1024MB
-max_files_per_process = 1000
-work_mem = 16MB
-maintenance_work_mem = 256MB
-checkpoint_segments = 20
-autovacuum = off
-EOT
-fi
-
-POSTGRES_CONFIG_CHANGED=false
-# Update shared memory limits in OS
-if ! sysctl -e kernel.shmmax | grep --quiet 1173741824; then
-    echo "Setting kernel.shmmax"
-    sudo sysctl -w kernel.shmmax=1173741824
-    sudo sh -c "echo 'kernel.shmmax=1173741824' >> /etc/sysctl.conf"
-    POSTGRES_CONFIG_CHANGED=true
-fi
-if ! sysctl -e kernel.shmall | grep --quiet 2097152; then
-    echo "Setting kernel.shmall"
-    sudo sysctl -w kernel.shmall=2097152
-    sudo sh -c "echo 'kernel.shmall=2097152' >> /etc/sysctl.conf"
-    POSTGRES_CONFIG_CHANGED=true
-fi
-if [ "$POSTGRES_CONFIG_CHANGED" == "true" ]; then
-  sudo service postgresql restart
-fi
-
-# In a bit of a backward fashion, install vagrant/vbox here so that you can quickly spin up a different 
-# configuration of hoot if needed, or troubleshoot the actual hoot vagrant install.
-if [ ! -f vagrant_1.8.1_x86_64.deb ]; then
-  wget https://releases.hashicorp.com/vagrant/1.8.1/vagrant_1.8.1_x86_64.deb
-  sudo dpkg -i vagrant_1.8.1_x86_64.deb
-  sudo apt-get -f install -y
-fi
-if [ ! -f virtualbox-5.0_5.0.14-105127~Ubuntu~trusty_amd64.deb ]; then
-  wget http://download.virtualbox.org/virtualbox/5.0.14/virtualbox-5.0_5.0.14-105127~Ubuntu~trusty_amd64.deb
-  sudo dpkg -i virtualbox-5.0_5.0.14-105127~Ubuntu~trusty_amd64.deb
-  # Need to understand why this needs to be done...probably not great
-  sudo rm -f /etc/apt/sources.list.d/virtualbox.list
-  sudo apt-get -f install -y
-fi
-
-# Configure Tomcat
-if ! grep -i --quiet HOOT /etc/default/tomcat7; then
-echo "Configuring tomcat environment"
-sudo bash -c "cat >> /etc/default/tomcat7" <<EOT
-
-#--------------
-# Hoot Settings
-#--------------
-HOOT_HOME=/home/hoot
-LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib:$HOOT_HOME/lib:$HOOT_HOME/pretty-pipes/lib
-GDAL_DATA=/usr/local/share/gdal
-GDAL_LIB_DIR=/usr/local/lib
-HOOT_WORKING_NAME=hoot
-PATH=$HOOT_HOME/bin:$PATH
-EOT
-fi
-
-# Change Tomcat java opts
-if grep -i --quiet '^JAVA_OPTS=.*\-Xmx128m' /etc/default/tomcat7; then
-    echo "Changing Tomcat java opts"
-    sudo sed -i.bak "s@\-Xmx128m@\-Xms512m \-Xmx2048m \-XX:PermSize=512m \-XX:MaxPermSize=4096m@" /etc/default/tomcat7
-fi
-
-# Fix env var path for GDAL_DATA
-if grep -i --quiet 'gdal/1.10' /etc/default/tomcat7; then
-    echo "Fixing Tomcat GDAL_DATA env var path"
-    sudo sed -i.bak s@^GDAL_DATA=.*@GDAL_DATA=\/usr\/local\/share\/gdal@ /etc/default/tomcat7
-fi
-
-# Remove gdal libs installed by libgdal-dev that interfere with
-# renderdb-export-server using gdal libs compiled from source (fgdb support)
-if [ -f /usr/lib/libgdal.* ]; then
-    echo "Removing GDAL libs installed by libgdal-dev"
-    sudo rm /usr/lib/libgdal.*
-fi
-
-# Create Tomcat context path for tile images
-if ! grep -i --quiet 'ingest/processed' /etc/tomcat7/server.xml; then
-    echo "Adding Tomcat context path for tile images"
-    sudo sed -i.bak "s@<\/Host>@  <Context docBase=\"\/home\/bwitham\/hoot\/ingest\/processed\" path=\"\/static\" \/>\n      &@" /etc/tomcat7/server.xml
-fi
-
-# Allow linking in Tomcat context
-if ! grep -i --quiet 'allowLinking="true"' /etc/tomcat7/context.xml; then
-    echo "Set allowLinking to true in Tomcat context"
-    sudo sed -i.bak "s@^<Context>@<Context allowLinking=\"true\">@" /etc/tomcat7/context.xml
-fi
-
-# Create directory for webapp
-if [ ! -d /usr/share/tomcat7/.deegree ]; then
-    echo "Creating directory for webapp"
-    sudo mkdir /usr/share/tomcat7/.deegree
-    sudo chown tomcat7:tomcat7 /usr/share/tomcat7/.deegree
-fi
-
 #hoot has only been tested with hadoop 0.20.2 for the most part, so not installing from repos
+if ! grep --quiet "export HADOOP_HOME" ~/.profile; then
+    echo "Adding hadoop home to profile..."
+    echo "export HADOOP_HOME=/usr/local/hadoop" >> ~/.profile
+    source ~/.profile
+fi
 if [ ! -f hadoop-0.20.2.tar.gz ]; then
   wget https://archive.apache.org/dist/hadoop/core/hadoop-0.20.2/hadoop-0.20.2.tar.gz
   cd /usr/local
@@ -399,7 +182,7 @@ EOT
     sudo mkdir -p /hadoop/dfs/name/current
     sudo chmod -R 777 /hadoop
     hadoop namenode -format 
-    #prompt here not working
+    #TODO: prompt here not working
     #yes Y #(make sure to press CAPITAL Y for yes -- lower case y causes a failure)
   fi
 
@@ -416,11 +199,15 @@ EOT
   start-all.sh
   hadoop fs -ls /
   cd $HADOOP_HOME
+  # test it out
   hadoop jar ./hadoop-0.20.2-examples.jar pi 2 100
 fi
 
-# Eclipse configuration - You will still need to configure eclipse after this (web server integration, extensions, etc.; see Developer's Guide for details)
-
+# Eclipse configuration - You will still additional Eclipse configuration (web server integration, extensions, etc.)  See Developer's Guide for details.
+cd $HOOT_HOME
+# generate eclipse project files
+make eclipse
+cd ~
 if ! grep -i --quiet '-Xmx' /etc/eclipse.ini; then
   echo "Configuring Eclipse..."
 sudo bash -c "cat >> /etc/eclipse.ini" <<EOT
@@ -440,36 +227,18 @@ sudo bash -c "cat >> /etc/eclipse.ini" <<EOT
 EOT
 fi
 
-cd $HOME
-if [ ! -d $HOOT_HOME/hoot-core ]; then
-  git clone https://github.com/ngageoint/hootenanny.git hoot
+# Install vagrant/vbox here so that you can quickly spin up a different configurations of hoot if 
+# needed, or troubleshoot the actual hoot vagrant install.
+if [ ! -f vagrant_1.8.1_x86_64.deb ]; then
+  wget https://releases.hashicorp.com/vagrant/1.8.1/vagrant_1.8.1_x86_64.deb
+  sudo dpkg -i vagrant_1.8.1_x86_64.deb
+  sudo apt-get -f install -y
 fi
-cd hoot
-source ./SetupEnv.sh
-
-# Update the init.d script for node-mapnik-server
-sudo cp node-mapnik-server/init.d/node-mapnik-server /etc/init.d
-sudo chmod a+x /etc/init.d/node-mapnik-server
-# npm modules are installed when tomcat is deployed, which occurs when the --with-uitests option is enabled.
-
-# Check that hoot-ui submodule has been init'd and updated
-if [ ! "$(ls -A hoot-ui)" ]; then
-    echo "hoot-ui is empty"
-    echo "init'ing and updating submodule"
-    git submodule init && git submodule update
+if [ ! -f virtualbox-5.0_5.0.14-105127~Ubuntu~trusty_amd64.deb ]; then
+  wget http://download.virtualbox.org/virtualbox/5.0.14/virtualbox-5.0_5.0.14-105127~Ubuntu~trusty_amd64.deb
+  sudo dpkg -i virtualbox-5.0_5.0.14-105127~Ubuntu~trusty_amd64.deb
+  # Need to understand why this needs to be done...
+  sudo rm -f /etc/apt/sources.list.d/virtualbox.list
+  sudo apt-get -f install -y
 fi
-
-# Build Hoot
-echo "Configuring Hoot"
-aclocal && autoconf && autoheader && automake && ./configure -q --with-rnd --with-services --with-uitests
-if [ ! -f LocalConfig.pri ] && ! grep --quiet QMAKE_CXX LocalConfig.pri; then
-    echo 'Customizing LocalConfig.pri'
-    cp LocalConfig.pri.orig LocalConfig.pri
-    echo 'QMAKE_CXX=ccache g++' >> LocalConfig.pri
-fi
-echo "Building Hoot"
-make clean -sj$(nproc)
-make -sj$(nproc)
-make docs -sj$(nproc)
-make eclipse
 
